--- a/css/style.css
+++ b/css/style.css
@@ -35,21 +35,77 @@ body {
     gap: 15px;
 }
 
-.top_top_bar {
+.top_bar button {
+    border: None;
+    background: none;
+}
+
+.top_bar_top {
     background-color: chocolate;
     margin-top: 10px;
     
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.bottom_top_bar {
+.search_field {
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    flex-grow: 2;
+}
+
+.input_container {
+    display: flex;
+    align-items: stretch;
+    justify-content: stretch;
+    flex-grow: 1;
+}
+
+.input_container > input {
+    border-radius: 10px;
+    max-width: 100ch;
+    flex-grow: 1;
+    border: 0px;
+    background-color: rgb(176, 213, 232);
+}
+
+.profile_field {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.profile_field > a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+
+    font-family: "Exo 2", sans-serif;
+    font-size: 1em;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+
+    color: black;
+}
+
+.top_bar_bottom {
     background-color: crimson;
     margin-bottom: 10px;
 }
 
-.top_top_bar,
-.bottom_top_bar {
+.top_bar_top,
+.top_bar_bottom {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.top_profile_button {
+    width: 36px;
     margin-left: 10px;
-    margin-right: 10px;
+    margin-right: 15px;
 }
 
 .main_container {
@@ -89,7 +145,7 @@ body {
     font-style: normal;
 }
 
-.link_button>span {
+.link_button > span {
     padding-left: 7px;
 }
 
