--- a/css/style.css
+++ b/css/style.css
@@ -225,8 +225,10 @@ body {
     flex-direction: column;
     align-items: start; */
 }
-.announcements_and_trending_container {
-    border: 1px solid black;
+
+.projects_div > div {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .projects_tabs_container {
@@ -237,4 +239,68 @@ body {
 .projects_tab {
     background-color: cornflowerblue;
     height: 200px;
+    border-radius: 10px;
+    border-left: 10px red solid;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    padding-right: 10px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-top: 30px;
+}
+.project_tab_texts {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+.project_title {
+    font-size: 0.9em;
+    font-weight: bold;
+}
+.project_description {
+    color: rgb(22, 22, 22);
+    font-size: 0.85em;
+    margin: 0;
+}
+.project_tab_buttons {
+    align-self: end;
+}
+
+.announcements_and_trending_container {
+    border: 1px solid black;
+    display: grid;
+    grid-template-rows: 0.1fr 1fr 0.1fr 1fr;
+}
+
+.announcements_tabs_container {
+    background-color: darkslategray;
+
+    display: grid;
+    grid-template-rows: repeat(2, 1fr 1px) 1fr;
+
+    border-radius: 10px;
+}
+.announcements_tab {
+    background-color: chartreuse;
+    /* border-bottom: 1px solid salmon; */
+}
+.last_announcement {
+    border-bottom: none;
+}
+.divider {
+    background-color: salmon;
+    margin: 0 10% 0 10%;
+}
+
+.trending_tabs_container {
+    background-color: beige;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+}
+.trending_tab {
+    background-color: darkseagreen;
+    border: 1px solid black;
 }
