--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ body {
 }
 
 .page_container {
-    background-color: green;
+    /* background-color: green; */
+    background-color: rgb(202, 233, 235);
     height: 100vh;
 
     display: grid;
@@ -19,7 +20,7 @@ body {
 }
 
 .sidebar {
-    background-color: aquamarine;
+    background-color: gold;
 
     height: 100%;
 
@@ -30,7 +31,7 @@ body {
 }
 
 .top_bar {
-    background-color: blueviolet;
+    background-color: white;
 
     grid-column: 2 / -1;
 
@@ -38,6 +39,8 @@ body {
     grid-template-rows: 0.8fr 1fr;
 
     gap: 15px;
+
+    box-shadow: 0px 4px 6px -6px grey;
 }
 
 
@@ -47,7 +50,7 @@ body {
 }
 
 .top_bar_top {
-    background-color: chocolate;
+    /* background-color: chocolate; */
     margin-top: 10px;
     
     display: flex;
@@ -96,7 +99,7 @@ body {
 }
 
 .top_bar_bottom {
-    background-color: crimson;
+    /* background-color: crimson; */
     margin-bottom: 10px;
 }
 
@@ -113,7 +116,7 @@ body {
 }
 
 .main_container {
-    background-color: orange;
+    /* background-color: rgb(202, 233, 235); */
     height: 100%;
 
     grid-column: 2 / -1;
@@ -185,7 +188,7 @@ body {
     color: black;
 }
 .profile_name > a:hover {
-    color: blue;
+    color: rgb(59, 59, 220);
 }
 
 
@@ -220,7 +223,7 @@ body {
 }
 
 .projects_container {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding-left: 15px;
 }
 
@@ -237,10 +240,10 @@ body {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 .projects_tab {
-    background-color: cornflowerblue;
+    background-color: white;
     height: 200px;
     border-radius: 10px;
-    border-left: 10px red solid;
+    border-left: 10px gold solid;
 
     display: flex;
     flex-direction: column;
@@ -256,9 +259,13 @@ body {
     flex-direction: column;
     align-items: start;
 }
+.project_tab_texts > a {
+    text-decoration: None;
+}
 .project_title {
     font-size: 0.9em;
     font-weight: bold;
+    color: black;
 }
 .project_description {
     color: rgb(22, 22, 22);
@@ -275,8 +282,14 @@ body {
     color: rgb(22, 22, 22);
 }
 
+.projects_tab,
+.announcements_tabs_container,
+.trending_tabs_container {
+    box-shadow: 4px 4px 8px -2px grey;
+}
+
 .announcements_and_trending_container {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: grid;
     grid-template-rows: 0.1fr 1fr 0.1fr 1fr;
     padding-right: 20px;
